--- a/06_Advanced CSS/01_Gradients and Transitions/activity/index.html
+++ b/06_Advanced CSS/01_Gradients and Transitions/activity/index.html
@@ -11,7 +11,7 @@
 
             <section class="grid">
                 <article class="gcard">
-                    <h2>Aurora</h2>
+                    <h2>Auroras</h2>
                     <p>Soft glow and gentle motion.</p>
                 </article>
                 <article class="gcard">
